--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "kanazaca/counter-cache": "1.0.*"
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
