--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
